# medusa

./: .dockerigone  .env  .env.docker  .gitignore  Dockerfile  docker-compose.yaml  package-lock.json  package.json  passenger_wsgi.py  pyproject.toml  requirements.txt  start-django.sh  tailwind.config.js
app/: admin.py  forms.py  middleware.py  mixins.py  models.py  sms.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0002_customer_personnel_is_active_alter_personnel_comment_and_more.py  0003_import_default_data.py  0003_work_sale_work.py  0004_rename_sell_date_sale_date_and_more.py  0005_Create_admin.py  0006_userprofile.py  0007_alter_sale_date_alter_work_work_name.py  0008_bank_paymentmethod_payment.py  0009_transactiontype_transaction.py  0010_transactiontype_effect.py  0011_alter_transaction_amount.py  0012_alter_transaction_date.py  0013_sale_commission_amount_sale_commission_percentage_and_more.py  0014_appointment.py  0015_paytype_receipttype_pay_receipt.py  0016_receipt_sale_alter_appointment_customer_and_more.py  0017_alter_receipt_sale.py  0018_rename_name_customer_fname_appointment_created_at_and_more.py  0019_saleimage.py  0020_saleimage_image_type.py
app/templatetags/: form_tags.py  number_to_words.py
app/tests/: test_booking_urls.py
booking/: models.py  urls.py  views.py
booking/migrations/: 0001_initial.py  0002_appointment_notes_alter_appointment_customer_and_more.py
medusa/: asgi.py  passenger_wsgi.py  settings.py  urls.py  wsgi.py
static/: input.css  manifest.json  output.css  service-worker.js
static/js/: main.js
templates/accounts/: delete_user_confirm.html  edit_user.html  login.html  password_change.html  password_change_done.html
templates/app/: base.html  (+29 more)
(+8 files in other folders)
