[project]
name = "medusa"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-jalali-date (>=2.0.0,<3.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "khayyam (>=3.0.17,<4.0.0)",
    "num2fawords (>=1.1,<2.0)",
    "mysqlclient (>=2.2.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "medusa"}]


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^6.0.0"
django-browser-reload = "^1.18.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
